# FEM-c-eigen-

./: README.md
AllenChan/AllenChan/: CMakeLists.txt
AllenChan/AllenChan/AllenChan_2D/: .KsMini_Ex.cpp.swp  AllenChan_2D.cpp  CMakeLists.txt
AllenChan/AllenChan/include/FEMethod/: FEMethod_kernel.h  addSpMat.h  assembleA.h  assemblev.h  computeError.h  generate_PT.h
DG_1D/: CMakeLists.txt
DG_1D/DG_1D/: .DG_1D.cpp.swp  CMakeLists.txt  DG_1D.cpp  testvs  testvs.cpp
DG_1D/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  assembleA.h  assemblev.h  basefunction.h  boundary.h  computeError.h  generate_PT.h
DG_1D/include/algebra/: Matrix.h
KS/KS_TEST_NO_Egien/Poisson/: FE_Di_Neumann_2D.cpp  FE_Di_Robin_2D.cpp  FE_Dirichlet_2D.cpp
KS/KS_TEST_NO_Egien/include/FEMethod/: GaussQuadratrue.h  assembleA.h  assemblev.h
KS/KS_TEST_NO_Egien/include/algebra/: Vector.h
KS/KSminiExtrapolation/KsMini_Ex/: KsMini_Ex_Steady.cpp
KS/KSminiExtrapolation/include/FEMethod/: FEMethod_kernel.h  assembleA.h  boundary.h
KS/KSminiExtrapolation1/: CMakeLists.txt
KS/KSminiExtrapolation1/KsMini_Ex/: CMakeLists.txt  KsMini_Ex.cpp  KsMini_Ex_Steady.cpp
KS/KSpositivity/: CMakeLists.txt
KS/KSpositivity/KsPositivityCheck/: CMakeLists.txt  KSplot_I_U.py  KSplot_I_v.py  KSplot_U.py  KSplot_V.py  KsPosCheck.cpp  Kserrorcheck1_plt.cpp  Kserrorcheck_11.cpp  plotOrder.cpp
KS/KS模型_1维/: CMakeLists.txt
KS/KS模型_1维/KS方程/: .KS_1D_test1.cpp.swp  CMakeLists.txt  KS_1D_test1.cpp
KS/KS模型_2维/KS_2D/: .Eigen_test1.cpp.swp  CMakeLists.txt  Eigen_test1.cpp  FE_Dirichlet_2D.cpp  FE_Dirichlet_2D_feal_test.cpp  KS_2D_test1.cpp
KS/KS模型_2维（加一个方程）/KS_2D/: .Eigen_test1.cpp.swp  CMakeLists.txt  FE_Dirichlet_2D.cpp  KS_2D_test1.cpp  egin_test.cpp
KS/KS模型_2维（备份）/: CMakeLists.txt
KS/KS模型_2维（备份）/KS_2D/: .Eigen_test1.cpp.swp  .FE_Dirichlet_2D.cpp.swp  Eigen_test1.cpp  FE_Dirichlet_2D.cpp  KS_2D_test1.cpp
Navier-Stokes/: CMakeLists.txt  NS_64.txt  N_8_64_result.xlsx
Navier-Stokes/Navier_Stokes_steady_2D/: .Burger.cpp.swp  Burger.cpp  CMakeLists.txt  Navier_Stokes_steady_2D.cpp
Navier-Stokes/include/FEMethod/: .assembleA.h.swp  FEMethod_kernel.h  boundary.h  generate_PT.h
Navier-Stokes_Unsteady/: CMakeLists.txt  N_8_64_result.xlsx
Navier-Stokes_Unsteady/Navier_Stokes_Unsteady_2D/: .Navier_Stokes_Unsteady_2D.cpp.swn  .Navier_Stokes_Unsteady_2D.cpp.swp  CMakeLists.txt  Navier_Stokes_Unsteady_2D(附件).cpp  Navier_Stokes_Unsteady_2D.cpp
Navier-Stokes_Unsteady/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  ODESolver.h  ODESolver（复件）.h  boundary.h  computeError.h
Poisson_1D/1d_test/cppfile/: CMakeLists.txt  Poisson1D.cpp
Poisson_1D/Poisson/: CMakeLists.txt  FE_Dirich_Neu_1D.cpp
Poisson_1D/include/FEMethod/: FEMethod_kernel.h  boundary.h  computeError.h
Poisson_1D/include/algebra/: Algebra_kernel.h  Vector.h
Poisson_2D/: CMakeLists.txt
Poisson_2D/Poisson/: CMakeLists.txt  FE_Di_Neumann_2D.cpp  FE_Dirichlet_2D.cpp
Poisson_2D/include/FEMethod/: .boundary.h.swp  boundary.h  computeError.h  generate_PT.h
Poisson_2D/include/algebra/: Matrix.h
Stokes_Steady/: CMakeLists.txt  N_8_64_result.xlsx
Stokes_Steady/Stokes_steady_2D/: CMakeLists.txt  Stokes_steady_2D.cpp  Stokes_steady_2D_model1.cpp
Stokes_Steady/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  assembleA.h  assemblev.h  computeError.h
Stokes_Unsteady/: CMakeLists.txt  N_8_64_result.xlsx  theta_0.5_N_32.txt  theta_1_N_64.txt
Stokes_Unsteady/Stokes_Unsteady_2D/: .Stokes_Unsteady_2D.cpp.swp  CMakeLists.txt  Stokes_Unsteady_2D（复件）.cpp
Stokes_Unsteady/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  ODESolver.h  assemblev.h  boundary.h  computeError.h
elasticity/: CMakeLists.txt  说明
elasticity/elasticity/: CMakeLists.txt  FE_elasticity.cpp
elasticity/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  assembleA.h  basefunction.h  computeError.h
heat_wave_2D/: CMakeLists.txt  说明
heat_wave_2D/FEMethod_2D/: CMakeLists.txt  FE_heat_2D.cpp  FE_wave_2D.cpp
heat_wave_2D/FEMethod_2D/波方程/: 算例与热方程一样.txt
heat_wave_2D/include/FEMethod/: FEMethod_kernel.h  GaussQuadratrue.h  ODESolver.h  assemblev.h  basefunction.h  boundary.h  computeError.h  ra
heat_wave_2D/include/algebra/: Matrix.h
(+26 files in other folders)
